<resources>
    <string name="app_name">Enchanteur</string>
    <string name="create_account">Create an account</string>
    <string name="logo_content_description">Logo</string>

    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>

    <string name="sign_up_button">Sign Up</string>

    <string name="already_have_an_account">Already have an account? </string>
    <string name="login_here">Login here</string>

    <string name="sign_in_account">Sign in your account</string>

    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>

    <string name="login_button">Login</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <string name="welcome">Welcome to Library System App</string>

    <string name="recommended_button">Recommended</string>
    <string name="all_button">All</string>
    <string name="latest_button">Latest</string>

    <string name="search_description">search button</string>
    <string name="welcome_user">Welcome %s!</string>
    <string name="navigate">MANAGE BOOK:</string>
    <string name="add_book_button">ADD BOOK</string>
    <string name="update_book_button">UPDATE BOOK</string>
    <string name="delete_book_button">DELETE BOOK</string>
    <string name="issue_book_button">ISSUE BOOK</string>
    <string name="logout">Logout</string>
    <string name="fill_the_following_information">Fill the following information</string>

    <string name="book_number">Book number</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="category">Category</string>

    <string name="confirm">Confirm the books to be issue below:</string>
    <string name="confirm_button">Confirm</string>
    <string name="view_borrow_books_button">VIEW BORROWERS</string>
    <string name="return_borrow_books_button">RETURN BOOKS</string>

    <string name="fill_borrower_info">Please fill borrower information:</string>
    <string name="student_name">Enter Name</string>
    <string name="student_no">Enter Student Number</string>
    <string name="student_contact_no">Enter Contact Number</string>

    <string name="borrower">BORROWER LIST:</string>
    <string name="add_button">Add Button</string>

</resources>